istio/drule1.yaml
# DestinationRule with Circuit Breakers
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: myapp-destinationrule
spec:
  host: myapp # service name(myapp.default.svc.cluster.local))
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    outlierDetection: # Circuit breaker settings
      consecutive5xxErrors: 3 # Eject after 3 consecutive 5xx errors
      interval: 10s # Check the health of hosts every 10 seconds
      baseEjectionTime: 30s # Eject unhealthy hosts for 30 seconds
      maxEjectionPercent: 50 # Eject up to 50% of the hosts
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
